--- a/OS/Operativni sistemi.tex
+++ b/OS/Operativni sistemi.tex
@@ -771,10 +771,22 @@
 \begin{frame}
     \frametitle{Operacije nad sistemom fajlova}
     \begin{itemize}
+        \item Otvaranje/zatvaranje fajlova \newline
         \item Dodavanje fajlova \newline
         \item Brisanje fajlova \newline
         \item Premeštanje fajlova
     \end{itemize}
+\end{frame}
+
+\begin{frame}
+    \frametitle{Pouzdanost fajl sistema}
+    \begin{itemize}
+        \item Loši blokovi \newline
+        \item Backup (sigurnosne kopije)
+    \end{itemize}
+
+    
+
 \end{frame}
 
 \subsection*{}
