--- a/bugs/Bugs, bugs everywhere.tex
+++ b/bugs/Bugs, bugs everywhere.tex
@@ -50,6 +50,28 @@
 \end{center}
 \end{frame}
 
+\begin{frame}
+    \frametitle{Poreklo naziva}
+    \begin{center}
+        \includegraphics[width=5cm]{img/vacuum_tube.jpg}
+        \includegraphics[width=5cm]{img/first_generation.jpg}
+    \end{center}
+    \begin{itemize}
+        \item Računari prve generacije (1940-1960) \newline
+        \item Vakuumske cevi
+    \end{itemize}
+\end{frame}
+
+\begin{frame}
+    \frametitle{Poreklo naziva}
+    \begin{center}
+        \includegraphics[width=8cm]{img/grace_hopper.png}
+    \end{center}
+    \begin{itemize}
+        \item Dr Grace Hopper (09.09.1947)
+    \end{itemize}
+\end{frame}
+
 \section{Bagovi sa okruženjem}
 
 \begin{frame}
@@ -146,6 +168,40 @@
         \item prilikom nasilnog prekidanja pravi se file core u koji se upisuje poruka o grešci \newline
         \item može se napraviti simbolički link na \lstinline|/etc/passwords|
     \end{itemize}
+\end{frame}
+
+\begin{frame}
+    \frametitle{Čudna poruka na ekranu}
+
+    \begin{center}
+        \includegraphics[width=10cm]{img/PC_Load_Letter.jpg}
+    \end{center}
+    
+
+\end{frame}
+
+\begin{frame}
+    \frametitle{Čudna poruka na ekranu}
+    \begin{itemize}
+        \item HP LaseJet štampač \newline
+        \item Poruka o grešci i statusu iz legacy razloga može da ima samo 2 karaktera (PC - Paper Cassette)\newline 
+        \item Instrukcija ('LOAD') \newline
+        \item Veličina papira (LETTER - US i Kanada)
+    \end{itemize}
+\end{frame}
+
+\begin{frame}
+    \frametitle{General Failure}
+    \begin{center}
+        \includegraphics[width=10cm]{img/general_failure_screen.jpg}
+    \end{center}
+\end{frame}
+
+\begin{frame}
+    \frametitle{General Failure}
+    \begin{center}
+        \includegraphics[width=10cm]{img/general_failure.jpeg}
+    \end{center}
 \end{frame}
 
 \begin{frame}
